# QWEN3.0

./: .coveragerc  .cursorignore  .dockerignore  .env.example  .env.opencode-test  .gitignore  .gitignore_jdcloud  .gitleaks.toml  .gitmodules  .mcp.json  AGENTS.md  AGENTS_CN.md  AI_ROUTING_MODEL_COMPLETE_GUIDE.md  AI_WORKFLOW.md  ARCHITECTURE.md  CLAUDE.md  CODE_QUALITY_AUDIT_2026-06-11.md  CODE_QUALITY_IMPROVEMENT_COMPLETE.md  COMPLETE_PROJECT_REPORT.md  Cursor_System_Prompts_Full.md  Dockerfile  ERROR_FINGERPRINTS.md  MIMO_CORRECT_SETUP.md  MIMO_FIX_GUIDE.md  Makefile  NGINX_CACHE_SOLUTION.md  PONYTAIL-DEBT.md  PROJECT_LEARNING_REPORT.md  PROJECT_RED_V1.md  README.md  README_JDCLOUD_REDIS.md  REASONIX.md  STATUS.md  SUPERPOWERS_FINAL_REPORT.md  SYSTEM_HARDENING_REPORT.md  XIAOZHI_REFACTOR_CHECKLIST.md  _backend_eval.py  _chat_app.js  _chat_index.html  _chat_style.css  (+368 more)
.codegraph/: .gitignore  daemon.pid
.codex/: config.toml
.github/: dependabot.yml  renovate.json
.guardian/: baseline.json  findings.json  mcp-health.json  qclaw-baseline.json
.lima-code/: settings.json  skill-rules.json
.lima-tools/: a2_batch_replace.py  a2_batch_replace_pass2.py  a2_batch_replace_pass3.py  a3_submodule_replace.py  baseline_camel_snake.txt  baseline_grep.txt  baseline_paths.txt  baseline_protected.txt
agent_contracts/: __init__.py  task_contract.py
agent_eval/: __init__.py  regression_suite.py  task_score.py
agent_evolution/: __init__.py  candidates.py  promote.py
agent_roles/: __init__.py  roles.py
agent_runtime/: __init__.py  approval.py  approval_session.py  cli.py  (+25 more)
(+3297 files in other folders)
