[project]
name = "lima"
version = "1.3.0"
description = "LiMa（力码）— AI coding assistant backend, OpenAI/Anthropic compatible"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

[project.urls]
Homepage = "https://chat.donglicao.com"
Repository = "https://github.com/nicepkg/li-ma"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "rag_gate: marks tests requiring RAG eval fixtures (deselect with '-m \"not rag_gate\"')",
]

[tool.ruff]
# Configuration lives in ruff.toml; this section is reserved for future merge.

[tool.pyright]
# Configuration lives in pyrightconfig.json

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
